CEU specific recom map ref included

--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1331,3 +1331,25 @@ Exchange of DNA between chromosome pairs during meiosis has occurred throughout 
 	pages = {207--214},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/GNN6PZAK/Malaspinas et al. - 2016 - A genomic history of Aboriginal Australia.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/6BUSHIRT/nature18299.html:text/html}
 }
+
+
+@article{spence_inference_2019,
+	title = {Inference and analysis of population-specific fine-scale recombination maps across 26 diverse human populations},
+	volume = {5},
+	copyright = {Copyright © 2019 The Authors, some rights reserved; exclusive licensee American Association for the Advancement of Science. No claim to original U.S. Government Works. Distributed under a Creative Commons Attribution NonCommercial License 4.0 (CC BY-NC).. This is an open-access article distributed under the terms of the Creative Commons Attribution-NonCommercial license, which permits use, distribution, and reproduction in any medium, so long as the resultant use is not for commercial advantage and provided the original work is properly cited.},
+	issn = {2375-2548},
+	url = {https://advances.sciencemag.org/content/5/10/eaaw9206},
+	doi = {10.1126/sciadv.aaw9206},
+	abstract = {Fine-scale rates of meiotic recombination vary by orders of magnitude across the genome and differ between species and even populations. Studying cross-population differences has been stymied by the confounding effects of demographic history. To address this problem, we developed a demography-aware method to infer fine-scale recombination rates and applied it to 26 diverse human populations, inferring population-specific recombination maps. These maps recapitulate many aspects of the history of these populations including signatures of the trans-Atlantic slave trade and the Iberian colonization of the Americas. We also investigated modulators of the local recombination rate, finding further evidence that Polycomb group proteins and the trimethylation of H3K27 elevate recombination rates. Further differences in the recombination landscape across the genome and between populations are driven by variation in the gene that encodes the DNA binding protein PRDM9, and we quantify the weak effect of meiotic drive acting to remove its binding sites.
+Recombination rates vary across the genome and across populations in a way that depends on PRDM9 and chromatin structure.
+Recombination rates vary across the genome and across populations in a way that depends on PRDM9 and chromatin structure.},
+	language = {en},
+	number = {10},
+	urldate = {2020-06-10},
+	journal = {Science Advances},
+	author = {Spence, Jeffrey P. and Song, Yun S.},
+	month = oct,
+	year = {2019},
+	pages = {eaaw9206},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/PCAKVFLH/Spence and Song - 2019 - Inference and analysis of population-specific fine.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/3A9CB2U2/eaaw9206.html:text/html}
+}
